добавил описание используемых флагов при запуске программы